add for manager app userDetails service for loging with NoApPasswordEncoder; add httpBasic for communication with microservices

--- a/catalogue-service/src/main/resources/application-standalone.yaml
+++ b/catalogue-service/src/main/resources/application-standalone.yaml
@@ -1,4 +1,10 @@
 spring:
+  security:
+    user:
+      name: catalogue_service_user
+      password: password
+      roles:
+        - SERVICE
   application:
     name: catalogue-service
   datasource:
