--- a/catalogue-service/pom.xml
+++ b/catalogue-service/pom.xml
@@ -61,6 +61,11 @@
             <version>42.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
