--- a/catalogue-service/src/main/resources/application-standalone.yaml
+++ b/catalogue-service/src/main/resources/application-standalone.yaml
@@ -1,10 +1,14 @@
 spring:
   security:
-    user:
-      name: catalogue_service_user
-      password: password
-      roles:
-        - SERVICE
+#    user:
+#      name: catalogue_service_user
+#      password: password
+#      roles:
+#        - SERVICE
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8082/realms/selmag
   application:
     name: catalogue-service
   datasource:
@@ -13,6 +17,8 @@ spring:
     password: password
   jpa:
     show-sql: true
+
+
   flyway:
 
     schemas:
