--- a/manager-app/src/main/resources/application-standalone.yaml
+++ b/manager-app/src/main/resources/application-standalone.yaml
@@ -1,8 +1,29 @@
 spring:
   application:
     name: manager-app
+  datasource:
+    username: manager
+    url: jdbc:postgresql://localhost:5433/manager
+    password: password
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8082/realms/selmag
+            user-name-attribute: preferred_username
+        registration:
+          keycloak:
+            client-id: manager-app
+            client-secret: 0nTCxTeSBDKDniJkdlAKn7JEJGPBcQtB
+            scope:
+                - openid
+                - microprofile-jwt
+                - view_catalogue
+                - edit_catalogue
 
 
 services:
   catalogue:
     uri: http://localhost:8081
+    registration-id: keycloak
