07: [WebFlux] add validation on the clientCustomerService; add client for remote call into clientCustomerService;

--- a/customer-app/src/main/resources/application-standalone.yaml
+++ b/customer-app/src/main/resources/application-standalone.yaml
@@ -6,5 +6,8 @@ spring:
 services:
   catalogue:
     uri: http://localhost:8081
+  feedback:
+    uri: http://localhost:8085
+
 server:
-  port: 8083
+  port: 8084
