--- a/feedback-service/src/main/resources/application-standalone.yaml
+++ b/feedback-service/src/main/resources/application-standalone.yaml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: feedback-service
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/feedback
 
 
 server:
