--- a/customer-app/src/main/resources/application-standalone.yaml
+++ b/customer-app/src/main/resources/application-standalone.yaml
@@ -2,6 +2,21 @@ spring:
   application:
     name: customer-app
 
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8082/realms/selmag
+            user-name-attribute: preferred_username
+        registration:
+          keycloak:
+            client-id: customer-app
+            client-secret: ldOv49attIsQtJygyz22WgAEcYUKlXOQ
+            scope:
+              - openid
+              - view_catalogue
+
 
 services:
   catalogue:
