--- a/config/victoria-metrics/promscrape.yaml
+++ b/config/victoria-metrics/promscrape.yaml
@@ -1,5 +1,11 @@
 scrape_configs:
   - job_name: selmag_admin_service
     static_configs:
-      - targets: ["http://192.168.0.103:8888"]
+      - targets: ["http://192.168.0.104:8888"]
     metrics_path: /actuator/prometheus
+
+  - job_name: catalog_service
+    static_configs:
+      - targets: ["http://192.168.0.104:8081"]
+    metrics_path: /actuator/prometheus
+
