--- a/feedback-service/src/main/resources/application-standalone.yaml
+++ b/feedback-service/src/main/resources/application-standalone.yaml
@@ -12,12 +12,12 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/feedback
-
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:8082/realms/selmag
+#
+#  security:
+#    oauth2:
+#      resourceserver:
+#        jwt:
+#          issuer-uri: http://localhost:8082/realms/selmag
 
 
 server:
