--- a/catalogue-service/src/main/resources/application-standalone.yaml
+++ b/catalogue-service/src/main/resources/application-standalone.yaml
@@ -40,4 +40,7 @@ management:
     web:
       exposure:
         include: '*'
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
