--- a/customer-app/src/main/resources/application-standalone.yaml
+++ b/customer-app/src/main/resources/application-standalone.yaml
@@ -45,5 +45,8 @@ management:
     web:
       exposure:
         include: '*'
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 
