14: [Centralized Logs] add logs into grafana for feedback and manager services

--- a/manager-app/src/main/resources/application-standalone.yaml
+++ b/manager-app/src/main/resources/application-standalone.yaml
@@ -40,6 +40,9 @@ services:
 
 
 management:
+  metrics:
+    tags:
+      application: ${spring.application.name}
   health:
     readinessstate:
       enabled: true
